clang/test/BSC/Negative/Ownership/Borrow/borrow_operator_with_array_index/borrow_operator_with_array_index.cbs
// RUN: %clang_cc1 -fsyntax-only -verify=expected %s -verify-ignore-unexpected=note

int *global_ptr1;
int **global_ptr2;
int *global_ptr_arr1[2];
int *global_ptr_arr2[2][2];

void test() {
    int *_Borrow borrow_ptr1 = (int *_Borrow)global_ptr1;
    int **_Borrow borrow_ptr2 = (int **_Borrow)global_ptr2;
    int *_Borrow borrow_ptr_arr1[2] = {(int *_Borrow)global_ptr_arr1[0], (int *_Borrow)global_ptr_arr1[1]};
    int *(*_Borrow borrow_ptr_arr2)[2][2] = &_Mut global_ptr_arr2;    // expected-error@-1 {{cannot borrow `*global_ptr_arr1` as mutable more than once at a time}}

    *borrow_ptr1 = 1;
    **borrow_ptr2 = 1;
    *borrow_ptr_arr1[1] = 1;
    *(*borrow_ptr_arr2)[1][1] = 1;
}

void call5() {
  int a[10] = {1};
  int *_Borrow p1 = &_Mut a[4];
  int *_Borrow p2 = &_Mut a[5]; // expected-error {{cannot borrow `a` as mutable more than once at a time}}
  *p1 = 2;
  *p2 = 3;
}

int main() {
    test();
}